@@ -10,7 +10,7 @@ module Searchgasm
       def to_conditions(value)
         like = Like.new(klass, options)
         like.value = value
-        conditions = like.to_conditions
+        conditions = like.sanitize
         return conditions if conditions.blank?
         conditions.first.gsub!(" #{like_condition_name} ", " NOT #{like_condition_name} ")
         conditions
